<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="37dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="94dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="157dp"
        android:layout_height="36dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="56dp"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtusuario" />

    <EditText
        android:id="@+id/edtusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtclave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btningresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="83dp"
        android:text="@string/ingresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtclave" />

    <Button
        android:id="@+id/btncancelar"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="83dp"
        android:text="@string/cancelar"
        app:layout_constraintStart_toEndOf="@+id/btningresar"
        app:layout_constraintTop_toBottomOf="@+id/edtclave" />

</androidx.constraintlayout.widget.ConstraintLayout>